# tokendiet

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
benchmark/: README.md  gen.py  items.json  prep.py  run.py  score.py
benchmark/hay/: hard_coarse.json  hard_result.json  needle_coarse.json  needle_result.json  needle_test.py  summary.txt
benchmark/hotpot/: bm25_pred.json  gold.json  prep_hotpot.py  raw.json  raw_pred.json  sub_pred.json  sub_select.json
benchmark/results/: controlled.json  gold.json  prep.json  selftest.json  sub_pred.json  topk_pred.json
docs/: faq.md  receipts.md
docs/superpowers/specs/: 2026-05-29-subtraction-design.md
examples/: quickstart.py
launch/: reddit.md  show-hn.md  x-thread.md
src/subtraction/: __init__.py  core.py
src/tokendiet/: __init__.py  __main__.py  core.py
tests/: test_core.py
