[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subtraction"
version = "0.1.0"
description = "Keep only the context your task actually needs — extractive, query-aware context compression."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "pornlsy2004-ux" }]
keywords = ["llm", "context", "compression", "rag", "prompt", "tokens", "subtraction"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
tokens = ["tiktoken>=0.5"]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/pornlsy2004-ux/subtraction"
Repository = "https://github.com/pornlsy2004-ux/subtraction"

[tool.hatch.build.targets.wheel]
packages = ["src/subtraction"]
