[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokendiet"
version = "0.1.0"
description = "Keep only the context your task actually needs — extractive, query-aware context compression."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "pornlsy2004-ux" }]
keywords = ["llm", "tokens", "token-reduction", "context", "context-engineering", "compression", "prompt", "rag", "subtraction"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
tokens = ["tiktoken>=0.5"]
dev = ["pytest>=7"]

[project.scripts]
tokendiet = "tokendiet.__main__:main"

[project.urls]
Homepage = "https://github.com/pornlsy2004-ux/tokendiet"
Repository = "https://github.com/pornlsy2004-ux/tokendiet"

[tool.hatch.build.targets.wheel]
packages = ["src/tokendiet"]

[tool.hatch.build.targets.sdist]
only-include = ["src/tokendiet", "README.md", "LICENSE", "pyproject.toml"]
